# email-triage-app

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  readme.md
ai_plan/: s0_init.md  s1_app_init.md
app/: config.py  main.py
app/agent/: model.py  tools.py  triage_agent.py
app/api/: routes_health.py  routes_triage.py
app/models/: inbound.py  triage.py
app/runlog/: run.py
app/services/: conversion.py  storage.py
dashboard/: test-evaluation.html
dashboard/assets/: app.js  evals-data.js  styles.css
docs/: brief-init.md
evals/: README.md  run_evals.py
evals/cases/01-invoice-pdf/: expected.json  request.json
evals/cases/02-expenses-xlsx/: expected.json
evals/cases/03-body-only/: expected.json
tests/: test_conversion.py  test_models.py  test_triage_endpoint.py
tests/data/: README.md  body.html  body_noatt.html  body_xlsx.html  make_payload.py  may-expenses.xlsx  sample_email_no_attachment.json  sample_email_xlsx.json
