[project]
name = "email-triage-app"
version = "0.1.0"
description = "FastAPI demo service that turns Power Automate Outlook payloads into structured prioritised tasks."
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.78,<1.0",
    "fastapi>=0.138,<0.139",
    "httpx>=0.28,<0.29",
    "logfire[fastapi,httpx]>=4.37,<5.0",
    "markitdown[all]>=0.1.6,<0.2",
    "pydantic>=2.13,<3.0",
    "pydantic-ai>=2.0,<3.0",
    "pydantic-settings>=2.14,<3.0",
    "uvicorn[standard]>=0.49,<0.50",
]

[dependency-groups]
dev = [
    "mypy>=1.19",
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "ruff>=0.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
